--- a/src/sass/const/_const.scss
+++ b/src/sass/const/_const.scss
@@ -1,4 +1,12 @@
-/* colors */
-$bgc: #00f;
-$bgc-mod: #f00;
-$font-color:#fff;
+// colors
+$clr_strong1 : #ffffff;
+$clr_normal : #333333;
+$clr_point : #421f15;
+$clr_strong2 : #c63205;
+
+// font size
+$fz_very_large : 34px;
+$fz_large : 22px;
+$fz_normal : 16px;
+$fz_small : 14px;
+$fz_min : 12px;
