--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,21 +1,10 @@
 @import "const/**";
 @import "media";
-
-body {
-    font-family: "Helvetica Neue",
-        Arial,
-        "Hiragino Kaku Gothic ProN",
-        "Hiragino Sans",
-        Meiryo,
-        sans-serif;
-    background-color: $bgc;
-    color: $font-color;
-}
-
-.clickable-img {
-    width: 30%;
-}
-
-.bgc--mod {
-    background-color: $bgc-mod;
-}
+@import "base";
+@import "nav";
+@import "main-visual";
+@import "btn";
+@import "title";
+@import "introduction";
+@import "news";
+@import "card";
