--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -22,4 +22,12 @@
         width: 250px / 810px * 100%;
         margin-bottom: 30px;
     }
+
+    &__card-sub {
+        width: 390px / 810px * 100%;
+
+        &:first-of-type {
+            margin-right: 30px / 810px * 100%;
+        }
+    }
 }
