--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -2,6 +2,11 @@
     margin: 60px 15% 0;
     position: relative;
 
+    @include mq(lg) {
+        margin: 60px 5% 0;
+        padding-bottom: 40px;
+    }
+
     &__title {
         margin-bottom: 30px;
     }
@@ -10,24 +15,41 @@
         position: absolute;
         right: 0;
         top: 10px;
+
+        @include mq() {
+            top: auto;
+            bottom: 0;
+            right: 50%;
+            transform: translateX(50%);
+        }
     }
 
     &__cards {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+
+        @include mq() {
+            display: block;
+        }
     }
 
     &__card {
         width: 250px / 810px * 100%;
         margin-bottom: 30px;
+
+        @include mq() {
+            width: 100%;
+            margin-bottom: 20px;
+        }
     }
 
     &__card-sub {
         width: 390px / 810px * 100%;
 
-        &:first-of-type {
-            margin-right: 30px / 810px * 100%;
+        @include mq() {
+            width: 100%;
+            margin-bottom: 20px;
         }
     }
 }
