--- a/src/sass/_introduction.scss
+++ b/src/sass/_introduction.scss
@@ -5,8 +5,11 @@
     background-color: rgba(255, 255, 255, 0.29);
     margin: 60px 15% 0 15%;
 
-    @include mq() {
+    @include mq(lg) {
         margin: 60px 5% 0;
+    }
+
+    @include mq() {
         background-size: 150px;
     }
 
