--- a/src/sass/_main-visual.scss
+++ b/src/sass/_main-visual.scss
@@ -7,11 +7,14 @@
 
     &__title {
         padding-bottom: 88px;
-        width: 80%;
         margin: 0 10%;
 
         img {
             width: 100%;
+        }
+
+        @include mq(lg) {
+            margin: 0 5%;
         }
 
         @include mq() {
@@ -24,6 +27,10 @@
         justify-content: space-between;
         align-items: flex-end;
         margin: 0 10%;
+
+        @include mq(lg) {
+            margin: 0 5%;
+        }
 
         @include mq() {
             display: block;
@@ -44,7 +51,7 @@
 
         @include mq() {
             margin: 0 auto;
-            width: 80%;
+            width: 90%;
             margin-bottom: 40px;
         }
     }
@@ -61,7 +68,7 @@
 
         @include mq() {
             margin: 0 auto;
-            width: 80%;
+            width: 90%;
         }
     }
 
