--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -27,7 +27,7 @@
     &__cards {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: flex-start;
 
         @include mq() {
             display: block;
@@ -38,18 +38,36 @@
         width: 250px / 810px * 100%;
         margin-bottom: 30px;
 
+        &:nth-child(1),
+        &:nth-child(2) {
+            margin-right: 30px / 810px * 100%;
+        }
+
         @include mq() {
             width: 100%;
             margin-bottom: 20px;
+
+            &:nth-child(1),
+            &:nth-child(2) {
+                margin-right: 0;
+            }
         }
     }
 
     &__card-sub {
         width: 390px / 810px * 100%;
 
+        &:nth-child(4) {
+            margin-right: 30px / 810px * 100%;
+        }
+
         @include mq() {
             width: 100%;
             margin-bottom: 20px;
+
+            &:nth-child(4) {
+                margin-right: 0;
+            }
         }
     }
 }
