--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,8 +56,10 @@ a {
 }
 
 .main-visual__title {
-	margin: 0 10%;
+	margin: 0 auto;
+	max-width: 920px;
 	padding-bottom: 88px;
+	width: 80%;
 }
 
 .main-visual__title img {
@@ -68,7 +70,9 @@ a {
 	align-items: flex-end;
 	display: flex;
 	justify-content: space-between;
-	margin: 0 10%;
+	margin: 0 auto;
+	max-width: 810px;
+	width: 80%;
 }
 
 .main-visual__date {
@@ -139,7 +143,9 @@ a {
 	background-image: url(../img/introduction_bgi.png);
 	background-position: top left;
 	background-repeat: no-repeat;
-	margin: 60px 15% 0 15%;
+	margin: 60px auto 0;
+	max-width: 810px;
+	width: 70%;
 }
 
 .introduction__title {
@@ -169,8 +175,10 @@ a {
 }
 
 .news {
-	margin: 60px 15% 0;
+	margin: 60px auto 0;
+	max-width: 810px;
 	position: relative;
+	width: 70%;
 }
 
 .news__title {
@@ -275,7 +283,9 @@ a {
 .story__content {
 	display: flex;
 	justify-content: flex-end;
-	margin: 0 15% 30px;
+	margin: 0 auto 30px;
+	max-width: 810px;
+	width: 70%;
 }
 
 .story__text {
@@ -292,8 +302,10 @@ a {
 }
 
 .comments {
-	margin: 60px 15% 0;
+	margin: 60px auto 0;
+	max-width: 810px;
 	position: relative;
+	width: 90%;
 }
 
 .comments__title {
@@ -355,7 +367,9 @@ a {
 
 .cast__contents-inner {
 	display: flex;
-	margin: 0 15% 15px;
+	margin: 0 auto 15px;
+	max-width: 810px;
+	width: 70%;
 }
 
 .cast__content {
@@ -428,11 +442,11 @@ a {
 @media screen and (max-width: 991px) {
 
 .main-visual__title {
-	margin: 0 5%;
+	width: 90%;
 }
 
 .main-visual__content {
-	margin: 0 5%;
+	width: 90%;
 }
 
 .main-visual__date {
@@ -440,20 +454,23 @@ a {
 }
 
 .main-visual__text {
-	width: 250px;
+	width: 300px;
 }
 
 .introduction {
-	margin: 60px 5% 0;
+	margin: 60px auto 0;
+	width: 90%;
 }
 
 .news {
-	margin: 60px 5% 0;
+	margin: 60px auto 0;
 	padding-bottom: 40px;
+	width: 90%;
 }
 
 .story__content {
-	margin: 0 5% 30px;
+	margin: 0 auto 30px;
+	width: 90%;
 }
 
 .story__text {
@@ -461,11 +478,13 @@ a {
 }
 
 .comments {
-	margin: 60px 5% 0;
+	margin: 60px auto 0;
+	width: 90%;
 }
 
 .cast__contents-inner {
-	margin: 0 5% 15px;
+	margin: 0 auto 15px;
+	width: 90%;
 }
 
 }
