--- a/src/sass/_cast.scss
+++ b/src/sass/_cast.scss
@@ -11,10 +11,13 @@
 
     &__contents-inner {
         display: flex;
-        margin: 0 15% 15px;
+        margin: 0 auto 15px;
+        width: 70%;
+        max-width: 810px;
 
         @include mq(lg) {
-            margin: 0 5% 15px;
+            margin: 0 auto 15px;
+            width: 90%;
         }
 
         @include mq() {
