--- a/src/sass/_comments.scss
+++ b/src/sass/_comments.scss
@@ -1,9 +1,12 @@
 .comments {
     position: relative;
-    margin: 60px 15% 0;
+    margin: 60px auto 0;
+    width: 90%;
+    max-width: 810px;
 
     @include mq(lg) {
-        margin: 60px 5% 0;
+        margin: 60px auto 0;
+        width: 90%;
     }
 
     &__title {
