--- a/src/sass/_introduction.scss
+++ b/src/sass/_introduction.scss
@@ -3,10 +3,13 @@
     background-repeat: no-repeat;
     background-position: top left;
     background-color: rgba(255, 255, 255, 0.29);
-    margin: 60px 15% 0 15%;
+    margin: 60px auto 0;
+    width: 70%;
+    max-width: 810px;
 
     @include mq(lg) {
-        margin: 60px 5% 0;
+        margin: 60px auto 0;
+        width: 90%;
     }
 
     @include mq() {
