--- a/src/sass/_news.scss
+++ b/src/sass/_news.scss
@@ -1,9 +1,12 @@
 .news {
-    margin: 60px 15% 0;
+    margin: 60px auto 0;
     position: relative;
+    width: 70%;
+    max-width: 810px;
 
     @include mq(lg) {
-        margin: 60px 5% 0;
+        margin: 60px auto 0;
+        width: 90%;
         padding-bottom: 40px;
     }
 
