--- a/src/sass/_btn.scss
+++ b/src/sass/_btn.scss
@@ -20,6 +20,13 @@
         line-height: 60px;
     }
 
+    &--large-brown {
+        background-color: $clr_point;
+        width: 200px;
+        height: 60px;
+        line-height: 60px;
+    }
+
     &--border {
         color: $clr_strong2;
         box-sizing: border-box;
