newsヘッダー作成中

--- a/src/sass/_main-visual.scss
+++ b/src/sass/_main-visual.scss
@@ -1,6 +1,6 @@
 .main-visual {
-    background-image: url(../img/hero.png);
     background-position: center;
+    background-size: cover;
     position: relative;
     padding-top: 60px;
     padding-bottom: 60px;
