--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,8 +48,8 @@ a {
 }
 
 .main-visual {
-	background-image: url(../img/hero.png);
 	background-position: center;
+	background-size: cover;
 	padding-bottom: 60px;
 	padding-top: 60px;
 	position: relative;
@@ -111,6 +111,10 @@ a {
 .btn:focus {
 	opacity: 0.8;
 	transition: .3s;
+}
+
+.btn--medium {
+	width: 150px;
 }
 
 .btn--large {
@@ -507,6 +511,44 @@ a {
 	display: block;
 	font-size: 12px;
 	text-align: center;
+}
+
+.sub-header__wrapper {
+	background-position: center;
+	background-size: cover;
+	padding-top: 60px;
+}
+
+.sub-header__img-wrapper {
+	display: flex;
+	margin: 0 auto;
+	max-width: 810px;
+	padding-bottom: 60px;
+	position: relative;
+	width: 70%;
+}
+
+.sub-header__title-wrapper {
+	margin-right: 12.34568%;
+	width: 56.79012%;
+}
+
+.sub-header__title-wrapper img {
+	width: 100%;
+}
+
+.sub-header__date-wrapper {
+	width: 30.8642%;
+}
+
+.sub-header__date-wrapper img {
+	width: 100%;
+}
+
+.sub-header__btn {
+	bottom: -20px;
+	position: absolute;
+	right: 0;
 }
 
 @media screen and (max-width: 991px) {
