--- a/src/sass/_btn.scss
+++ b/src/sass/_btn.scss
@@ -14,6 +14,10 @@
         opacity: 0.8;
     }
 
+    &--medium {
+        width: 150px;
+    }
+
     &--large {
         width: 200px;
         height: 60px;
