--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 @import "const/**";
 @import "media";
 @import "base";
+@import "breadcrumbs";
 @import "nav";
 @import "main-visual";
 @import "btn";
@@ -13,4 +14,6 @@
 @import "cast";
 @import "schedule";
 @import "Footer";
-@import "sub-header"
+@import "sub-header";
+@import "news-list";
+@import "wp-pagenavi";
