--- a/src/sass/_main-visual.scss
+++ b/src/sass/_main-visual.scss
@@ -1,4 +1,5 @@
 .main-visual {
+    background-image: url(../img/hero.png);
     background-position: center;
     background-size: cover;
     position: relative;
