--- a/src/sass/_sub-header.scss
+++ b/src/sass/_sub-header.scss
@@ -1,5 +1,6 @@
 .sub-header {
     &__wrapper {
+        background-image: url(../img/hero.png);
         background-position: center;
         background-size: cover;
         padding-top: 60px;
