--- a/src/sass/_cast.scss
+++ b/src/sass/_cast.scss
@@ -9,6 +9,10 @@
         background-color: rgba(255, 255, 255, 0.9);
     }
 
+    &--detail {
+        padding-bottom: 40px;
+    }
+
     &__contents-inner {
         display: flex;
         margin: 0 auto 15px;
@@ -69,20 +73,21 @@
         border-radius: 50%;
     }
 
-    &__role {
+    &__country {
         text-align: center;
         font-size: $fz_normal;
         color: $clr_normal;
-        line-height: 21px;
-        height: 21px;
+        line-height: 30px;
+        height: 30px;
     }
 
     &__name {
         text-align: center;
-        font-size: $fz_normal;
+        font-size: 18px;
+        font-weight: bold;
         color: $clr_normal;
-        line-height: 21px;
-        height: 21px;
+        line-height: 30px;
+        height: 30px;
     }
 
     &__expert {
