--- a/src/css/style.css
+++ b/src/css/style.css
@@ -728,10 +728,16 @@ a:focus {
 	text-align: right;
 }
 
-.story-detail__first {
+.story-detail__left-contents {
 	background-color: #000;
-	background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.8)), url(../img/story1.png);
 	background-position: center, left center;
+	background-repeat: no-repeat;
+	background-size: cover, 70%;
+}
+
+.story-detail__right-contents {
+	background-color: #000;
+	background-position: center, right center;
 	background-repeat: no-repeat;
 	background-size: cover, 70%;
 }
@@ -778,30 +784,6 @@ a:focus {
 	padding-bottom: 60px;
 	padding-top: 60px;
 	width: 47%;
-}
-
-.story-detail__second {
-	background-color: #000;
-	background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1)), url(../img/story2.png);
-	background-position: center, right center;
-	background-repeat: no-repeat;
-	background-size: cover, 70%;
-}
-
-.story-detail__third {
-	background-color: #000;
-	background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.8)), url(../img/story3.png);
-	background-position: center, left center;
-	background-repeat: no-repeat;
-	background-size: cover, 70%;
-}
-
-.story-detail__4th {
-	background-color: #000;
-	background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1)), url(../img/story4.png);
-	background-position: center, right center;
-	background-repeat: no-repeat;
-	background-size: cover, 70%;
 }
 
 .comments-detail {
@@ -988,28 +970,18 @@ a:focus {
 	width: 90%;
 }
 
-.story-detail__first {
+.story-detail__left-contents {
+	background-position: center;
+	background-size: cover;
+}
+
+.story-detail__right-contents {
 	background-position: center;
 	background-size: cover;
 }
 
 .story-detail__text {
 	width: 60%;
-}
-
-.story-detail__second {
-	background-position: center;
-	background-size: cover;
-}
-
-.story-detail__third {
-	background-position: center;
-	background-size: cover;
-}
-
-.story-detail__4th {
-	background-position: center;
-	background-size: cover;
 }
 
 .comments-detail {
