--- a/src/css/style.css
+++ b/src/css/style.css
@@ -911,6 +911,95 @@ a:focus {
 	margin-bottom: 60px;
 }
 
+.inquiry {
+	margin: 30px auto 0;
+	max-width: 810px;
+	width: 70%;
+}
+
+.inquiry__wrapper {
+	background-color: rgba(255, 255, 255, 0.29);
+	margin-top: 30px;
+	padding: 30px;
+}
+
+.inquiry__text {
+	color: #333333;
+	font-size: 16px;
+	line-height: 1.875;
+}
+
+.inquiry__form {
+	margin-top: 20px;
+}
+
+.inquiry__row {
+	align-items: center;
+	display: flex;
+	justify-content: flex-end;
+	margin-bottom: 15px;
+}
+
+.inquiry__row label {
+	color: #333333;
+	display: block;
+	font-size: 16px;
+	margin-right: 20px;
+	text-align: right;
+}
+
+.inquiry__row input[type="text"] {
+	background: #ffffff;
+	border: none;
+	border-radius: 0;
+	color: #333333;
+	display: block;
+	font-size: 16px;
+	height: 45px;
+	outline: none;
+	padding: 0;
+	width: 69.33333%;
+}
+
+.inquiry__row textarea {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	background: #ffffff;
+	border: 0;
+	color: #333333;
+	display: block;
+	font-size: 16px;
+	height: 165px;
+	line-height: 1.5;
+	outline: none;
+	padding: 0;
+	resize: none;
+	width: 69.33333%;
+}
+
+.inquiry__btn {
+	margin-top: 30px;
+	text-align: center;
+}
+
+.inquiry__btn input[type="submit"] {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	background-color: #c63205;
+	border: none;
+	color: #ffffff;
+	display: inline-block;
+	font-size: 16px;
+	height: 60px;
+	line-height: 60px;
+	outline: none;
+	padding: 0;
+	text-align: center;
+	width: 200px;
+}
+
 @media screen and (max-width: 991px) {
 
 .main-visual__title {
@@ -997,6 +1086,10 @@ a:focus {
 }
 
 .cast-detail__staff {
+	width: 90%;
+}
+
+.inquiry {
 	width: 90%;
 }
 
@@ -1273,6 +1366,29 @@ a:focus {
 
 .cast-detail__name {
 	font-size: 16px;
+}
+
+.inquiry__wrapper {
+	padding: 15px;
+}
+
+.inquiry__row {
+	display: block;
+}
+
+.inquiry__row label {
+	margin-bottom: 15px;
+	margin-right: 0;
+	text-align: left;
+}
+
+.inquiry__row input[type="text"] {
+	margin-bottom: 25px;
+	width: 100%;
+}
+
+.inquiry__row textarea {
+	width: 100%;
 }
 
 }
